fix: adjust spacing primitive

--- a/src/sections/Footer/Footer.module.css
+++ b/src/sections/Footer/Footer.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
 
   margin-top: var(--spacing-5);
-  margin-bottom: var(--spacing-12);
+  margin-bottom: var(--spacing-10);
 }
 
 .linkWrapper {
